--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_markdown: ^0.2.0
   #    path: ../../../../Open Source/flutter_markdown
   path_provider: ^1.1.0
+  html_unescape: ^1.0.1+2
 
 
 dev_dependencies:
