--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,5 +24,15 @@ jobs:
         run: flutter test
       - name: "🏗 Build Android App Bundle"
         run: flutter build appbundle
-      - name: "🏗 Build iOS App"
-        run: flutter build ios
+      - name: "📤 Upload Android App Bundle"
+        uses: actions/upload-artifact@v1.0.0
+        with:
+          name: "Android App Bundle"
+          path: build/app/outputs/bundle/release/app-release.aab
+      - name: "🏗 Build Android APK"
+        run: flutter build appbundle
+      - name: "📤 Upload Android APK"
+        uses: actions/upload-artifact@v1.0.0
+        with:
+          name: "Android APK"
+          path: build\app\outputs\apk\release\app-release.apk
