--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,4 +35,4 @@ jobs:
         uses: actions/upload-artifact@v1.0.0
         with:
           name: "Android APK"
-          path: build\app\outputs\apk\release\app-release.apk
+          path: build/app/outputs/apk/release/app-release.apk
