--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,16 @@ name: CI
 on: push
 
 jobs:
-  build:
+  checkout:
+    name: "📥 Check-out"
     runs-on: macos-10.15
     steps:
       - name: "📥 Check-out"
         uses: actions/checkout@v1
+  install:
+    name: "🧰 Installation"
+    runs-on: macos-10.15
+    steps:
       - name: "🧰 Install Java"
         uses: actions/setup-java@v1
         with:
@@ -16,21 +21,49 @@ jobs:
         uses: subosito/flutter-action@v1
         with:
           flutter-version: "1.12.x"
+  build:
+    name: "🏗 Build"
+    runs-on: macos-10.15
+    needs:
+      - checkout
+      - install
+    steps:
       - name: "👤 Disable tracking"
         run: flutter config --no-analytics
       - name: "🧰 Install dependencies"
         run: flutter pub get
-      - name: "✅ Test"
-        run: flutter test
+      - name: "🏗 Build AOT Dart code"
+        run: flutter build aot
       - name: "🏗 Build Android App Bundle"
         run: flutter build appbundle
+      - name: "🏗 Build Android APK"
+        run: flutter build apk
+  verify:
+    name: "✅ Verification"
+    runs-on: macos-10.15
+    needs:
+      - build
+    steps:
+      - name: "✅ Analyze"
+        run: flutter analyze
+      - name: "✅ Test"
+        run: flutter test --coverage
+  upload:
+    name: "📤 Upload"
+    runs-on: macos-10.15
+    needs:
+      - verify
+    steps:
+      - name: "📤 Upload test coverage report"
+        uses: codecov/codecov-action@v1.0.2
+        with:
+          token: ${{secrets.CODECOV_TOKEN}}
+          file: coverage/lcov.info
       - name: "📤 Upload Android App Bundle"
         uses: actions/upload-artifact@v1.0.0
         with:
           name: "Android App Bundle"
           path: build/app/outputs/bundle/release/app-release.aab
-      - name: "🏗 Build Android APK"
-        run: flutter build apk
       - name: "📤 Upload Android APK"
         uses: actions/upload-artifact@v1.0.0
         with:
