--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on: push
 jobs:
   build:
     name: "🏗 Build"
-    runs-on: macos-10.15
+    runs-on: ubuntu-18.04
     steps:
       - name: "📥 Check-out"
         uses: actions/checkout@v1
@@ -33,6 +33,8 @@ jobs:
         run: flutter test --coverage
       - name: "📤 Upload test coverage report"
         uses: codecov/codecov-action@v1.0.2
+        if: os == Linux
+        continue-on-error: true
         with:
           token: ${{secrets.CODECOV_TOKEN}}
           file: coverage/lcov.info
