--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,11 @@ jobs:
       - name: "✅ Test"
         run: flutter test --coverage
       - name: "📤 Upload test coverage report"
+        uses: actions/upload-artifact@v1.0.0
+        with:
+          name: "Test coverage report"
+          path: coverage/lcov.info
+      - name: "📤 Upload test coverage report to Codecov.io"
         uses: codecov/codecov-action@v1.0.2
         if: runner.os == 'Linux'
         continue-on-error: true
