--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   markdown: ^2.1.3
   html_unescape: ^1.0.1+3
   path_provider: ^1.6.5
+  google_fonts: ^0.3.9
 
 dev_dependencies:
   flutter_test:
