--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,3 +35,9 @@ jobs:
           body: ${{ steps.generate-changelog.outputs }}
           draft: true
           prerelease: false
+      - name: "🔔 Notify Slack"
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        uses: pullreminders/slack-action@master
+        with:
+          args: "{\"channel\":\"CLWH056RL\",\"blocks\":{\"type\":\"home\",\"blocks\":[{\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\":rocket: New <https://github.com/${{ github.repository }}|*${{ github.repository }}*> release on GitHub:\"}},{\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\"*Release v1.2.0*\"}},{\"type\":\"context\",\"elements\":[{\"type\":\"mrkdwn\",\"text\":\"*Tag:* <https://github.com/${{ github.repository }}/releases/tag/${{ github.ref }}|`${{ github.ref }}`>\"},{\"type\":\"mrkdwn\",\"text\":\"*Commit:* <https://github.com/${{ github.repository }}/commits/${{ github.sha }}|`${{ github.sha }}`>\"},{\"type\":\"mrkdwn\",\"text\":\"*User:* <https://github.com/${{ github.actor }}|@${{ github.actor }}>\"}]},{\"type\":\"actions\",\"elements\":[{\"type\":\"button\",\"text\":{\"type\":\"plain_text\",\"text\":\"View Release\"},\"style\":\"primary\",\"url\":\"https://github.com/${{ github.repository }}/releases/tag/${{ github.ref }}\"},{\"type\":\"button\",\"text\":{\"type\":\"plain_text\",\"text\":\"Compare\"},\"url\":\"https://github.com/${{ github.repository }}/compare/${{ github.ref }}...HEAD\"}]}]}}"
