Fix changelog output

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
-          body: ${{ steps.generate-changelog.outputs }}
+          body: ${{ steps.generate-changelog.outputs.changelog }}
           draft: true
           prerelease: false
       - name: "🔔 Notify Slack"
