--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
       - name: "✏️ Generate changelog"
         id: generate-changelog
         if: runner.os == 'Linux'
-        uses: heinrichreimer/action-github-changelog-generator@104444
+        uses: heinrichreimer/action-github-changelog-generator@6dc86dea6fa8c49c2e14995ce784e3bb6c29c44b
         with:
           header-label: ""
           since-tag: "'$(git describe --abbrev=0 --tags `git rev-list --tags --skip=1 --max-count=1`)'"
