Update changelog action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,10 +15,9 @@ jobs:
       - name: "✏️ Generate changelog"
         id: generate-changelog
         if: runner.os == 'Linux'
-        uses: heinrichreimer/action-github-changelog-generator@04cb791f54e6217baf8cd34d55efc607f258af6d
+        uses: heinrichreimer/action-github-changelog-generator@a1e31854
         with:
-          header-label: ""
-          since-tag: "$(git describe --tags $(git rev-list --tags --skip=1 --max-count=1))"
+          sinceTag: "$(git describe --tags $(git rev-list --tags --skip=1 --max-count=1))"
       - name: "📤 Upload changelog"
         uses: actions/upload-artifact@v1.0.0
         with:
@@ -38,6 +37,6 @@ jobs:
       - name: "🔔 Notify Slack"
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-        uses: pullreminders/slack-action@master
+        uses: pullreminders/slack-action@v1.0.7
         with:
           args: "{\"channel\":\"CLWH056RL\",\"blocks\":{\"type\":\"home\",\"blocks\":[{\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\":rocket: New <https://github.com/${{ github.repository }}|*${{ github.repository }}*> release on GitHub:\"}},{\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\"*Release v1.2.0*\"}},{\"type\":\"context\",\"elements\":[{\"type\":\"mrkdwn\",\"text\":\"*Tag:* <https://github.com/${{ github.repository }}/releases/tag/${{ github.ref }}|`${{ github.ref }}`>\"},{\"type\":\"mrkdwn\",\"text\":\"*Commit:* <https://github.com/${{ github.repository }}/commits/${{ github.sha }}|`${{ github.sha }}`>\"},{\"type\":\"mrkdwn\",\"text\":\"*User:* <https://github.com/${{ github.actor }}|@${{ github.actor }}>\"}]},{\"type\":\"actions\",\"elements\":[{\"type\":\"button\",\"text\":{\"type\":\"plain_text\",\"text\":\"View Release\"},\"style\":\"primary\",\"url\":\"https://github.com/${{ github.repository }}/releases/tag/${{ github.ref }}\"},{\"type\":\"button\",\"text\":{\"type\":\"plain_text\",\"text\":\"Compare\"},\"url\":\"https://github.com/${{ github.repository }}/compare/${{ github.ref }}...HEAD\"}]}]}}"
