--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,9 @@ jobs:
       - name: "✏️ Generate changelog"
         id: generate-changelog
         if: runner.os == 'Linux'
-        uses: heinrichreimer/action-github-changelog-generator@a1e31854
+        uses: heinrichreimer/action-github-changelog-generator@ca3cde0
         with:
-          sinceTag: "'$(git describe --tags $(git rev-list --tags --skip=1 --max-count=1))'"
+          onlyLastTag: "true"
       - name: "📤 Upload changelog"
         uses: actions/upload-artifact@v1.0.0
         with:
