--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   html_unescape: ^1.0.1+3
   path_provider: ^1.6.5
   google_fonts: ^0.3.9
+  preferences: ^5.1.0
+  provider: ^4.0.4
 
 dev_dependencies:
   flutter_test:
