--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,12 @@ description: Simple text editor/notepad with cloud sync.
 version: 0.1.1+2
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.3
+  material_design_icons_flutter: 4.0.5045
   markdown: ^2.1.3
   html_unescape: ^1.0.1+3
   path_provider: ^1.6.5
