--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_fonts: ^0.3.9
   preferences: ^5.1.0
   provider: ^4.0.4
+  url_launcher: ^5.4.2
 
 dev_dependencies:
   flutter_test:
