--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   preferences: ^5.1.0
   provider: ^4.0.4
   url_launcher: ^5.4.2
+  shared_preferences: ^0.5.6+3
 
 dev_dependencies:
   flutter_test:
