--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,14 @@
 buildscript {
     ext.kotlin_version = '1.3.70'
     repositories {
+        gradlePluginPortal()
         google()
         jcenter()
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath "com.github.triplet.gradle:play-publisher:2.7.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
