--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,8 @@ jobs:
         run: flutter pub get
       - name: "🏗 Build AOT Dart code"
         run: flutter build aot
-      #      - name: "🏗 Build Android App Bundle"
-      #        run: flutter build appbundle
+      - name: "🏗 Build Android App Bundle"
+        run: flutter build appbundle
       - name: "🏗 Build Android APK"
         run: flutter build apk
       - name: "✅ Analyze"
@@ -42,11 +42,11 @@ jobs:
         with:
           token: ${{secrets.CODECOV_TOKEN}}
           file: coverage/lcov.info
-      #      - name: "📤 Upload Android App Bundle"
-      #        uses: actions/upload-artifact@v1.0.0
-      #        with:
-      #          name: "Android App Bundle"
-      #          path: build/app/outputs/bundle/release/app-release.aab
+      - name: "📤 Upload Android App Bundle"
+        uses: actions/upload-artifact@v1.0.0
+        with:
+          name: "Android App Bundle"
+          path: build/app/outputs/bundle/release/app-release.aab
       - name: "📤 Upload Android APK"
         uses: actions/upload-artifact@v1.0.0
         with:
