--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,14 @@ dependencies:
   material_design_icons_flutter: 4.0.5345
   markdown: ^2.1.3
   html_unescape: ^1.0.1+3
-  path_provider: ^1.6.5
+  path_provider: ^1.6.11
   google_fonts: ^1.1.0
   preferences: ^5.1.0
   provider: ^4.0.4
   url_launcher: ^5.4.2
   shared_preferences: ^0.5.6+3
+  googleapis: ^0.55.0
+  googleapis_auth: ^0.2.12
 
 dev_dependencies:
   flutter_test:
