--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ version: 0.1.1+2
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
+  flutter: ^1.18.0
 
 dependencies:
   flutter:
@@ -20,6 +21,8 @@ dependencies:
   shared_preferences: ^0.5.6+3
   googleapis: ^0.55.0
   googleapis_auth: ^0.2.12
+  flutter_secure_storage: ^3.3.3
+  yaml: ^2.2.1
 
 dev_dependencies:
   flutter_test:
@@ -29,6 +32,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+  - secrets.yaml
     - assets/icon-squircle.png
     - assets/avatars/janheinrichreimer.png
     - assets/avatars/kevinaguilar.png
