--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,12 @@
 buildscript {
-    ext.kotlin_version = '1.3.70'
+    ext {
+        kotlinVersion = '1.3.72'
+        compileSdkVersion = 30
+        targetSdkVersion = 30
+        minSdkVersion = 21
+        appCompatVersion = "1.1.0"
+    }
+
     repositories {
         gradlePluginPortal()
         google()
@@ -7,9 +14,9 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:3.5.4'
         classpath "com.github.triplet.gradle:play-publisher:2.7.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
 
@@ -17,6 +24,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url "${project(':background_fetch').projectDir}/libs"
+        }
     }
 }
 
