--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,13 @@ dependencies:
   path: ^1.7.0
   modal_bottom_sheet: ^0.2.0+1
 
+  nextcloud: ^1.3.1
+  #  webdav: ^1.0.8-dev
+  #  biometric_storage: ^1.1.0+1
+  dropbox_client: ^0.7.1
+#  dropbox_integration: ^0.1.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
