--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,36 +7,32 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
   flutter: ^1.18.0
 
+
 dependencies:
   flutter:
     sdk: flutter
-  markdown: ^2.1.3
-  html_unescape: ^1.0.1+3
-  path_provider: ^1.6.11
-  google_fonts: ^1.1.0
-  preferences: ^5.1.0
-  provider: ^4.0.4
-  url_launcher: ^5.4.2
-  shared_preferences: ^0.5.6+3
-  googleapis: ^0.56.1
-  googleapis_auth: ^0.2.12
-  flutter_secure_storage: ^3.3.3
-  yaml: ^2.2.1
-  watcher: ^0.9.7+15
   async: ^2.4.1
-  background_fetch: ^0.6.0
-  mime_type: ^0.3.2
+  background_fetch: ^0.7.2
+  dropbox_client: ^0.8.0
+  flutter_secure_storage: ^4.1.0
+  google_fonts: ^2.0.0
+  googleapis: ^2.0.0
+  googleapis_auth: ^1.1.0
+  html_unescape: ^2.0.0
+  markdown: ^4.0.0
+  mime_type: ^1.0.0
+  modal_bottom_sheet: ^2.0.0
+  nextcloud: ^3.0.0
   open_file: ^3.0.1
-  modal_bottom_sheet: ^0.2.0+1
   path: ^1.7.0
-  tuple: ^1.0.3
-
-  nextcloud: ^1.3.1
-  #  webdav: ^1.0.8-dev
-  #  biometric_storage: ^1.1.0+1
-  dropbox_client: ^0.7.1
-#  dropbox_integration: ^0.1.0
-
+  path_provider: ^2.0.1
+  pref: ^2.0.2
+  provider: ^5.0.0
+  shared_preferences: ^2.0.5
+  tuple: ^2.0.0
+  url_launcher: ^6.0.3
+  watcher: ^1.0.0
+  yaml: ^3.1.0
 
 dev_dependencies:
   flutter_test:
